--- a/ProjeYL1/packages.config
+++ b/ProjeYL1/packages.config
@@ -1,9 +1,14 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="dotnet-stop-words" version="1.1.0" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.31" targetFramework="net472" />
   <package id="Microsoft.AspNet.Mvc" version="5.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.Razor" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
-  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="2.0.1" targetFramework="net472" />
+  <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="NZemberek" version="0.1" targetFramework="net472" />
+  <package id="StemmersNet" version="1.1.1.0" targetFramework="net472" />
+  <package id="ZemberekDotNet.Morphology" version="0.17.3" targetFramework="net472" />
 </packages>
