--- a/SiteIcerik/packages.config
+++ b/SiteIcerik/packages.config
@@ -1,4 +1,12 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
+  <package id="dotnet-stop-words" version="1.1.0" targetFramework="net472" />
   <package id="HtmlAgilityPack" version="1.11.31" targetFramework="net472" />
+  <package id="Lucene.Net" version="3.0.3" targetFramework="net472" />
+  <package id="Lucene.Net.Contrib" version="3.0.3" targetFramework="net472" />
+  <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
+  <package id="NZemberek" version="0.1" targetFramework="net472" />
+  <package id="SharpZipLib" version="0.86.0" targetFramework="net472" />
+  <package id="StemmersNet" version="1.1.1.0" targetFramework="net472" />
+  <package id="ZemberekDotNet.Morphology" version="0.17.3" targetFramework="net472" />
 </packages>
