--- a/ProjeYL1/packages.config
+++ b/ProjeYL1/packages.config
@@ -7,6 +7,7 @@
   <package id="Microsoft.AspNet.WebPages" version="3.2.7" targetFramework="net472" />
   <package id="Microsoft.CodeDom.Providers.DotNetCompilerPlatform" version="3.6.0" targetFramework="net472" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net472" />
+  <package id="NetSpell" version="2.1.7" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="NZemberek" version="0.1" targetFramework="net472" />
   <package id="StemmersNet" version="1.1.1.0" targetFramework="net472" />
