--- a/SiteIcerik/packages.config
+++ b/SiteIcerik/packages.config
@@ -4,6 +4,7 @@
   <package id="HtmlAgilityPack" version="1.11.31" targetFramework="net472" />
   <package id="Lucene.Net" version="3.0.3" targetFramework="net472" />
   <package id="Lucene.Net.Contrib" version="3.0.3" targetFramework="net472" />
+  <package id="NetSpell" version="2.1.7" targetFramework="net472" />
   <package id="Newtonsoft.Json" version="12.0.3" targetFramework="net472" />
   <package id="NZemberek" version="0.1" targetFramework="net472" />
   <package id="SharpZipLib" version="0.86.0" targetFramework="net472" />
