--- a/SiteIcerik/SiteIcerik.csproj
+++ b/SiteIcerik/SiteIcerik.csproj
@@ -99,7 +99,9 @@
   <ItemGroup>
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TfIdfCalculator.cs" />
     <Compile Include="WordAndFreq.cs" />
+    <Compile Include="WordAndWeight.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
