--- a/YazLabSite/YazLabSite.csproj
+++ b/YazLabSite/YazLabSite.csproj
@@ -105,6 +105,7 @@
   <ItemGroup>
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\Asama1Controller.cs" />
+    <Compile Include="Controllers\Asama2Controller.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -118,12 +119,14 @@
     <Compile Include="Models\WordAndWeight.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Asama1ViewModel.cs" />
+    <Compile Include="ViewModels\Asama2ViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
     <None Include="packages.config" />
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Asama1\Index.cshtml" />
+    <Content Include="Views\Asama2\Index.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
