--- a/YazLabSite/YazLabSite.csproj
+++ b/YazLabSite/YazLabSite.csproj
@@ -106,6 +106,7 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="Controllers\Asama1Controller.cs" />
     <Compile Include="Controllers\Asama2Controller.cs" />
+    <Compile Include="Controllers\Asama3Controller.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -119,7 +120,9 @@
     <Compile Include="Models\WordAndWeight.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModels\Asama1ViewModel.cs" />
+    <Compile Include="ViewModels\Asama23ViewModel.cs" />
     <Compile Include="ViewModels\Asama2ViewModel.cs" />
+    <Compile Include="ViewModels\Asama3ViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Views\web.config" />
@@ -127,6 +130,9 @@
     <Content Include="Views\Shared\_Layout.cshtml" />
     <Content Include="Views\Asama1\Index.cshtml" />
     <Content Include="Views\Asama2\Index.cshtml" />
+    <Content Include="Views\Asama3\Index.cshtml" />
+    <Content Include="Views\Asama3\IndexPost.cshtml" />
+    <Content Include="Views\Asama3\Son.cshtml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
